--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <p>I really hope this is worth the risk I've taken for you, again.</p>
         <p>I've attached some summaries of the files you asked for as well as some notes I was able to gather from the ones that led the investigation.</p>
         <p>I was able to get access to the interrogation recordings, but I was interrupted in the middle of downloading them. Hopefully they're intact.</p>
+        <p>I was also able to find all their social media pages if you'd like to take a look or get in contact - no doubt you already have, but they're here nonetheless - <a href='themiffedriffs.html'>The Miffed Riffs</a>, <a href='sonder.html'>Sonder</a>, <a href='helpershelpline.html'>Helper's Helpline</a> and <a href='conversationationator.html'>Conversationationator</a>.</p>
         <p>Be careful.</p>
         <p>Don't try to reply, it'll only bounce.</p>
         <p>- Your friend in the 'wrong place'.</p>
