--- a/conversationationator.html
+++ b/conversationationator.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>CONVERSATIONATIONATOR</title>
-    <link rel="icon" type="image/jpg" href="/images/conicon.png"/>
+    <link rel="icon" type="image/jpg" href="./images/conicon.png"/>
 </head>
 
 <!-- GAP AT THE TOP -->
@@ -15,14 +15,14 @@
 
 <!-- YOU GOT STYLE GURL -->
 <!-- "DONT MESS WITH THIS BIT" -->
-<link rel="stylesheet" type="text/css" href="conversationationator.css">
-<script src="/conversationationator.js" defer></script>
+<link rel="stylesheet" type="text/css" href="./conversationationator.css">
+<script src="./conversationationator.js" defer></script>
 
 <!-- LEFT SIDE -->
 <!-- PROFILE N SHIT -->
 <div class="leftcolumn">
   <div class="cardleft">
-    <img src="/images/BACKGROUNDDDDD.jpg" width="100%" alt="pipe" style="border-style: dashed">
+    <img src="./images/BACKGROUNDDDDD.jpg" width="100%" alt="pipe" style="border-style: dashed">
     <p>CONVERSATIONATIONATOR</p>
       <div class="box">
         <p><i>watchca lookin for?</i></p>
@@ -34,7 +34,7 @@
     <div class="cardleft">
       <div class="box">
         <audio controls autoplay loop>
-          <source src="/audio/GROOVYBABY.mp3" type="audio/mp3">
+          <source src="./audio/GROOVYBABY.mp3" type="audio/mp3">
           Your browser does not support the audio element.
         </audio> 
       </div>
@@ -57,13 +57,13 @@
 <!-- "WHERE THE POSTS GO DUMBASS" -->
 <div class="rightcolumn">
   <div class="cardright">
-    <img src="/images/BACKGROUNDDDDD.jpg" width="11%" alt="pipe" style="border-style: dashed; float: left; margin-right: 20px;">
+    <img src="./images/BACKGROUNDDDDD.jpg" width="11%" alt="pipe" style="border-style: dashed; float: left; margin-right: 20px;">
     <p>CONVERSATIONATIONATOR</p>
     <p><i>watcha lookin for?</i></p>
     <br>
       <div class="box">
         <p>look, im not gonna pretend, i didnt know them all that well, but they didn't deserve what they got, and my friends didn't deserve to lose their friend.</p>
-        <p>they were an incredibly kind and <a href="/confession.html">generous person</a>, from what i knew of them.</p>
+        <p>they were an incredibly kind and <a href="./confession.html">generous person</a>, from what i knew of them.</p>
         <p>i hope they are in peace now.</p>
       </div>
     <!-- COMMENT SECTION -->
@@ -75,7 +75,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/BACK.jpg"
+                  src="./images/BACK.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -97,7 +97,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/BACK.jpg"
+                  src="./images/BACK.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -119,7 +119,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/BACK.jpg"
+                  src="./images/BACK.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -137,7 +137,7 @@
   </div>
   
   <div class="cardright">
-    <img src="/images/BACKGROUNDDDDD.jpg" width="11%" alt="pipe" style="border-style: dashed; float: left; margin-right: 20px;">
+    <img src="./images/BACKGROUNDDDDD.jpg" width="11%" alt="pipe" style="border-style: dashed; float: left; margin-right: 20px;">
     <p>CONVERSATIONATIONATOR</p>
     <p><i>watcha lookin for?</i></p>
     <br>
@@ -153,7 +153,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/BACK.jpg"
+                  src="./images/BACK.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -175,7 +175,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/BACK.jpg"
+                  src="./images/BACK.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -193,7 +193,7 @@
   </div>
 
   <div class="cardright">
-    <img src="/images/BACKGROUNDDDDD.jpg" width="11%" alt="pipe" style="border-style: dashed; float: left; margin-right: 20px;">
+    <img src="./images/BACKGROUNDDDDD.jpg" width="11%" alt="pipe" style="border-style: dashed; float: left; margin-right: 20px;">
     <p>CONVERSATIONATIONATOR</p>
     <p><i>watcha lookin for?</i></p>
     <br>
@@ -209,7 +209,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/BACK.jpg"
+                  src="./images/BACK.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -231,7 +231,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/BACK.jpg"
+                  src="./images/BACK.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -249,7 +249,7 @@
   </div>
 
   <div class="cardright">
-    <img src="/images/BACKGROUNDDDDD.jpg" width="11%" alt="pipe" style="border-style: dashed; float: left; margin-right: 20px;">
+    <img src="./images/BACKGROUNDDDDD.jpg" width="11%" alt="pipe" style="border-style: dashed; float: left; margin-right: 20px;">
     <p>CONVERSATIONATIONATOR</p>
     <p><i>watcha lookin for?</i></p>
     <br>
@@ -265,7 +265,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/BACK.jpg"
+                  src="./images/BACK.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -287,7 +287,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/BACK.jpg"
+                  src="./images/BACK.jpg"
                   alt="anonymous profile"
                 />
               </div>
