--- a/helpershelpline.html
+++ b/helpershelpline.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <title>Helper's Helpline</title>
-  <link rel="icon" type="image/jpg" href="/images/helpersicon.png"/>
+  <link rel="icon" type="image/jpg" href="./images/helpersicon.png"/>
 </head>
 
 <!-- link to stylesheet -->
-<link rel="stylesheet" type="text/css" href="helpershelpline.css">
+<link rel="stylesheet" type="text/css" href="./helpershelpline.css">
 
 <!-- header data -->
 <div class="header">
@@ -38,7 +38,7 @@
     <!-- post on relationship troubles -->
     <h2>( Relationship Troubles )</h2>
       <div class="box">
-        <p><i>From: <a href="/disconnection.html">Anonymous</a></i></p>
+        <p><i>From: <a href="./disconnection.html">Anonymous</a></i></p>
         <p><i>Hey, Sun. Thank you so much for providing this platform for people to be able to get advice and support when they need it. Though I usually am an active commenter on your site, today I'll be the one seeking some advice.</i></p>
         <p><i>Lately, my partner has been coming home each evening in worse and worse moods, and I'm not sure how to help. I've tried to make them feel better by listening to them as they talk about their day, cooking their favourite meals, watching their favourite movies together, and setting up days where we can relax and have some fun together.</i></p>
         <p><i>But, no matter what I seem to do, they always find something wrong with it - I'm not listening enough, or I didn't cook something right, or the movie isn't the right edition, or they just want to stay home because it's easier - except they manage to word it all like I'm the one with the problem.</i></p>
@@ -58,7 +58,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/hhhbackground.jpg"
+                  src="./images/hhhbackground.jpg"
                   alt="a profile picture"
                 />
               </div>
@@ -81,7 +81,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/hhhbackground.jpg"
+                  src="./images/hhhbackground.jpg"
                   alt="a profile picture"
                 />
               </div>
