--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <head>
     <meta charset="utf-8" />
     <title>Inbox</title>
-    <link rel="icon" type="image/jpg" href="/images/mailicon.png"/>
+    <link rel="icon" type="image/jpg" href="./images/mailicon.png"/>
 </head>
 
 <div class="header">
 </div>
 
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="./style.css">
 
 <div class="leftcolumn">
   <div class="cardleft">
-    <img src="/images/mailicon.png" width="100%" alt="mail"> 
+    <img src="./images/mailicon.png" width="100%" alt="mail"> 
     <div class="box">
     <p><b><u></u>Inbox</u></b></p>
     <p>Drafts</p>
@@ -27,7 +27,7 @@
 
 <div class="rightcolumn">
   <input type="checkbox" id="title1" />
-    <label for="title1"><img src="/images/mailicon.png" width="100%" alt="mail" style="width: 50px; float: left;">
+    <label for="title1"><img src="./images/mailicon.png" width="100%" alt="mail" style="width: 50px; float: left;">
     <p><b>&nbsp;&nbsp;THE WORLD</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Check out your weekly tarot reading and much more...</p></label>
 
@@ -40,7 +40,7 @@
 
 <div class="rightcolumn">
   <input type="checkbox" id="title2" />
-    <label for="title2"><img src="/images/mailicon.png" width="100%" alt="mail" style="width: 50px; float: left;">
+    <label for="title2"><img src="./images/mailicon.png" width="100%" alt="mail" style="width: 50px; float: left;">
     <p><b>&nbsp;&nbsp;K39RHEB39D</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     The documents you asked for.</p></label>
 
@@ -53,18 +53,18 @@
         <p>I really hope this is worth the risk I've taken for you, again.</p>
         <p>I've attached some summaries of the files you asked for as well as some notes I was able to gather from the ones that led the investigation.</p>
         <p>I was able to get access to the interrogation recordings, but I was interrupted in the middle of downloading them. Hopefully they're intact.</p>
-        <p>I was also able to find all their social media pages if you'd like to take a look or get in contact - no doubt you already have, but they're here nonetheless - <a href='themiffedriffs.html'>The Miffed Riffs</a>, <a href='sonder.html'>Sonder</a>, <a href='helpershelpline.html'>Helper's Helpline</a> and <a href='conversationationator.html'>Conversationationator</a>.</p>
+        <p>I was also able to find all their social media pages if you'd like to take a look or get in contact - no doubt you already have, but they're here nonetheless - <a href='./themiffedriffs.html'>The Miffed Riffs</a>, <a href='./sonder.html'>Sonder</a>, <a href='./helpershelpline.html'>Helper's Helpline</a> and <a href='./conversationationator.html'>Conversationationator</a>.</p>
         <p>Be careful.</p>
         <p>Don't try to reply, it'll only bounce.</p>
         <p>- Your friend in the 'wrong place'.</p>
-        <p><a href="/files/casedocumentation.pdf"><i>casedocumentation.pdf</i></a> &nbsp;&nbsp;&nbsp; <a href="/interrogationfiles.html"><i>interrogationrecordings.mp3</i></a></p>
+        <p><a href="./files/casedocumentation.pdf"><i>casedocumentation.pdf</i></a> &nbsp;&nbsp;&nbsp; <a href="./interrogationfiles.html"><i>interrogationrecordings.mp3</i></a></p>
       </div>
   </div>
 </div>
 
 <div class="rightcolumn">
   <input type="checkbox" id="title3" />
-    <label for="title3"><img src="/images/mailicon.png" width="100%" alt="mail" style="width: 50px; float: left;">
+    <label for="title3"><img src="./images/mailicon.png" width="100%" alt="mail" style="width: 50px; float: left;">
     <p><b>&nbsp;&nbsp;█████████</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     About the interview... </p></label>
 
@@ -77,7 +77,7 @@
 
 <div class="rightcolumn">
   <input type="checkbox" id="title4" />
-    <label for="title4"><img src="/images/mailicon.png" width="100%" alt="mail" style="width: 50px; float: left;">
+    <label for="title4"><img src="./images/mailicon.png" width="100%" alt="mail" style="width: 50px; float: left;">
     <p><b>&nbsp;&nbsp;██████████</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Next podcast episode</p></label>
 
@@ -90,7 +90,7 @@
 
 <div class="rightcolumn">
   <input type="checkbox" id="title5" />
-    <label for="title5"><img src="/images/mailicon.png" width="100%" alt="mail" style="width: 50px; float: left;">
+    <label for="title5"><img src="./images/mailicon.png" width="100%" alt="mail" style="width: 50px; float: left;">
     <p><b>&nbsp;&nbsp;THE WORLD</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Check out your weekly tarot reading and much more...</p></label>
 
