--- a/sonder.html
+++ b/sonder.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8" />
     <title>sonder</title>
-    <link rel="icon" type="image/jpg" href="/images/sondericon.png"/>
+    <link rel="icon" type="image/jpg" href="./images/sondericon.png"/>
   </head>
 
-<link rel="stylesheet" type="text/css" href="sonder.css">
+<link rel="stylesheet" type="text/css" href="./sonder.css">
 
 <div class="header">
 </div>
@@ -14,7 +14,7 @@
 <div class="row">
   <div class="leftcolumn">
     <div class="cardleft">
-      <img src="/images/profile.jpg" width="100%" alt="profile image" style="border-radius: 50%">
+      <img src="./images/profile.jpg" width="100%" alt="profile image" style="border-radius: 50%">
       <h2>Sonder</h2>
       <p>Just a place for me to air my musings.</p>
       <p>~</p>
@@ -27,27 +27,27 @@
 <!-- Left Column -->
 <div class="middlecolumn">
       <div class="card">
-    <img src="/images/pipe.jpg" width="100%" alt="pipe">
+    <img src="./images/pipe.jpg" width="100%" alt="pipe">
       <div class="box">
         <p>the confines of paths made predetermined for us, easier to see from outside than from within</p>
       </div>
   </div>
     <div class="card">
-    <img src="/images/bottle.jpg" width="100%" alt="bottlesonthebeach">
+    <img src="./images/bottle.jpg" width="100%" alt="bottlesonthebeach">
       <div class="box">
         <p>i hope that you do not feel discarded, like the bottles we used to collect off the shore, that you know i would never leave you without reason and assurance that i would return. i hope that you will wait for me.</p>
       </div>
     </div>
     <div class="card">
-    <img src="/images/hydrangea.jpg" width="100%" alt="hydrangea">
+    <img src="./images/hydrangea.jpg" width="100%" alt="hydrangea">
       <div class="box">
         <p>something about apologies</p>
       </div>
   </div>
   <div class="card">
-    <img src="/images/blueflowers.jpg" width="100%" alt="blue flowers">
+    <img src="./images/blueflowers.jpg" width="100%" alt="blue flowers">
       <div class="box">
-        <p>i'm sorry that i can't be who i need to be to make you happy, i wish i was capable of <a href="/regression.html">metamorphosis</a></p>
+        <p>i'm sorry that i can't be who i need to be to make you happy, i wish i was capable of <a href="./regression.html">metamorphosis</a></p>
       </div>
   </div>
 </div>
@@ -55,25 +55,25 @@
 <!-- Middle Column -->
 <div class="middlesecondcolumn">
   <div class="card">
-    <img src="/images/mushroom.jpg" width="100%" alt="ilovedyouandyetyouaregone">
+    <img src="./images/mushroom.jpg" width="100%" alt="ilovedyouandyetyouaregone">
       <div class="box">
         <p>these are the kinds of beautiful things that remind me of you</p>
       </div>
   </div>
   <div class="card">
-    <img src="/images/leaves.jpg" width="100%" alt="autumnleaves">
+    <img src="./images/leaves.jpg" width="100%" alt="autumnleaves">
       <div class="box">
         <p>we met in the autumn, it's that time of year once more, where the leaves fall and all i can think of is you</p>
       </div>
   </div>
   <div class="card">
-    <img src="/images/catkin.jpg" width="100%" alt="catkin">
+    <img src="./images/catkin.jpg" width="100%" alt="catkin">
       <div class="box">
         <p>i'm sorry, i couldn't stay there, i'm sorry, i couldn't be there for you, i'm sorry, i couldn't see how i hurt you, i'm sorry, i couldn't remain by your side, i'm sorry, that i had to leave you behind</p>
       </div>
   </div>
   <div class="card">
-    <img src="/images/profile1.jpg" width="100%" alt="who i am">
+    <img src="./images/profile1.jpg" width="100%" alt="who i am">
       <div class="box">
         <p>i wish the spring would last forever</p>
       </div>
@@ -83,25 +83,25 @@
 <!-- Right Column -->
 <div class="rightcolumn">
   <div class="card">
-    <img src="/images/train.jpg" width="100%" alt="train">
+    <img src="./images/train.jpg" width="100%" alt="train">
       <div class="box">
         <p>it isn't what i want, but what i choose. the reasonings of which you may ponder until i am able to have both what i want and what i choose</p>
       </div>
   </div>
   <div class="card">
-    <img src="/images/blueandyellow.jpg" width="100%" alt="blue and yellow">
+    <img src="./images/blueandyellow.jpg" width="100%" alt="blue and yellow">
       <div class="box">
         <p>almost at a crossroads</p>
       </div>
   </div>
   <div class="card">
-    <img src="/images/cranes.jpg" width="100%" alt="cranes">
+    <img src="./images/cranes.jpg" width="100%" alt="cranes">
       <div class="box">
         <p>the world moves so fast now, every time i look behind me expecting to see you there, i have to remind myself that i left you behind</p>
       </div>
   </div>
   <div class="card">
-    <img src="/images/yellowandblue.jpg" width="100%" alt="yellow and blue">
+    <img src="./images/yellowandblue.jpg" width="100%" alt="yellow and blue">
       <div class="box">
         <p>you're the only one who has ever made me feel both yellow and blue</p>
       </div>
