--- a/themiffedriffs.html
+++ b/themiffedriffs.html
@@ -6,16 +6,16 @@
   <head>
     <meta charset="utf-8" />
     <title>The Miffed Riffs</title>
-    <link rel="icon" type="image/jpg" href="/images/miffedriffsprofile.jpg"/>
+    <link rel="icon" type="image/jpg" href="./images/miffedriffsprofile.jpg"/>
   </head>
 
-<link rel="stylesheet" type="text/css" href="themiffedriffs.css">
+<link rel="stylesheet" type="text/css" href="./themiffedriffs.css">
 
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
       <h2>A Proper Send Off</h2>
-      <img src="/images/miffedriffsteaser.jpg" width="100%" alt="whose guitar could that be...?">
+      <img src="./images/miffedriffsteaser.jpg" width="100%" alt="whose guitar could that be...?">
       <p>Wow... We can almost hear your panic from all the way on the other side of the screen... Don't worry, none of us are going anywhere. This is just a little teaser for an upcoming planned performance!</p>
       <p>Think you can figure out the venue? What about whose guitar is in the image...?</p>
       <p>Might even be a few prize tickets in it... First come first serve!</p>
@@ -26,7 +26,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/miffedriffsbackground.jpg"
+                  src="./images/miffedriffsbackground.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -48,7 +48,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/miffedriffsbackground.jpg"
+                  src="./images/miffedriffsbackground.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -70,7 +70,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/miffedriffsbackground.jpg"
+                  src="./images/miffedriffsbackground.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -89,7 +89,7 @@
 
     <div class="card">
       <h2>At the Hustler!</h2>
-      <img src="/images/miffedriffsatthehustler.jpg" width="100%" alt="J's keys on the stage at the Hustler">
+      <img src="./images/miffedriffsatthehustler.jpg" width="100%" alt="J's keys on the stage at the Hustler">
       <p>Hey Riffters!  Thank you so so much for all your support last night at the Hustler - the energy was absolutely through the roof - it won't be a night any of us will forget any time soon.</p>
       <p>This was our last scheduled performance for our mini-tour across Melbourne. Thank you for being a part of it, and thank you for being so understanding with E not being able to attend the last few gigs.</p>
       <p>We'll be going on a much deserved break for the next few weeks, but keep your ear close to the ground, you never know when we might sprout up again! In the meantime, take care of yourself (by listening to our music, of course) and we'll see you all again soon!</p>
@@ -101,7 +101,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/miffedriffsbackground.jpg"
+                  src="./images/miffedriffsbackground.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -123,7 +123,7 @@
             <div class="user">
               <div class="user-image">
                 <img
-                  src="/images/miffedriffsbackground.jpg"
+                  src="./images/miffedriffsbackground.jpg"
                   alt="anonymous profile"
                 />
               </div>
@@ -145,7 +145,7 @@
     <div class="card">
       <h2>From The Emperor</h2>
       <p>Hey, guys.</p>
-      <p>Just wanted to say thank you for all the kind words and support I've been getting from you all in regard to <a href="/realisation.html">Death</a>. Their passing was incredibly sudden and a terrible shock to me and the rest of the band.</p>
+      <p>Just wanted to say thank you for all the kind words and support I've been getting from you all in regard to <a href="./realisation.html">Death</a>. Their passing was incredibly sudden and a terrible shock to me and the rest of the band.</p>
       <p>As many of you probably know, Death and I met at one of our very first gigs, and told us from the outset that we had something really amazing going, to stick with it, and let it grow. Without those words of encouragement this band would not be where it is today.</p>
       <p>Thank you all again for your kind words of support and love, I hope to get back playing with the band as soon as I'm up to it. Please wait for me until then.</p>
       <p>- E</p>
