--- a/disconnection.html
+++ b/disconnection.html
@@ -9,18 +9,22 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play disconnection.</tw-noscript></noscript></tw-story>
-<tw-storydata name="disconnection" startnode="10" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="2532cea0-b595-498b-a2b0-3402b5da836f" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">body {
-  font-family: "Times New Roman", serif;
+<tw-storydata name="disconnection" startnode="7" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="2532cea0-b595-498b-a2b0-3402b5da836f" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">body {
+  font-family: "Times New Roman";
   font-size: 12px;
-  background-color: black;
-  opacity: 0.6;
+  background-color: rgba(0, 0, 0, 0.6);
   background-image: url(images/mint.jpg);
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   margin-top: 0px;
   margin-bottom: 0px;
-  margin-right: 150px;
-  margin-left: 150px;
+  margin-right: 10%;
+  margin-left: 10%;
+}
+
+tw-story {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: rgba(255, 255, 255, 0.8);
 }
 
  /* Removing the back/forward arrows. */
@@ -136,51 +140,21 @@ tw-link:active, .enchantment-link:active {
 
 (align:&quot;=&gt;&lt;=&quot;)+(click-replace: &quot;✦&quot;)+(transition: &quot;dissolve&quot;)[&#39;Maybe you just fell over?&#39;
 
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[[[✦-&gt;4.1]]]]</tw-passagedata><tw-passagedata pid="5" name="5" tags="" position="700,925" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[&#39;I said, I think you should leave.&#39;
-
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]
-
-(align:&quot;=&gt;&lt;=&quot;)+(click-replace: &quot;✦&quot;)+(transition: &quot;dissolve&quot;)[This time, when I spoke, you listened.
-
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]
-
-(align:&quot;=&gt;&lt;=&quot;)+(click-replace: &quot;✦&quot;)+(transition: &quot;dissolve&quot;)[&#39;Are you kidding me? //You// called me here. What am I supposed to do now? Just, like, leave you here?&#39;
-
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]
-
-(align:&quot;=&gt;&lt;=&quot;)+(click-replace: &quot;✦&quot;)+(transition: &quot;dissolve&quot;)[&#39;Yes. Does that bother you?&#39;
-
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[[[✦-&gt;6]]]]</tw-passagedata><tw-passagedata pid="6" name="6" tags="" position="700,1050" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[It took you a while to respond, a few quick glances to the now-dry blood decorating my face, but you made your decision.
-
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]
-
-(align:&quot;=&gt;&lt;=&quot;)+(click-replace: &quot;✦&quot;)+(transition: &quot;dissolve&quot;)[&#39;No.&#39;
-
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]
-
-(align:&quot;=&gt;&lt;=&quot;)+(click-replace: &quot;✦&quot;)+(transition: &quot;dissolve&quot;)[&#39;Then leave. Please.&#39;
-
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]
-
-(align:&quot;=&gt;&lt;=&quot;)+(click-replace: &quot;✦&quot;)+(transition: &quot;dissolve&quot;)[And so you left.
-
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[[[✦-&gt;7]]]]</tw-passagedata><tw-passagedata pid="7" name="7" tags="" position="700,1175" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[And so you left.
-
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]
-
-(align:&quot;=&gt;&lt;=&quot;)+(click-replace: &quot;✦&quot;)+(transition: &quot;dissolve&quot;)[You picked up your unused first aid kit and walked yourself out the door.
-
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]
-
-(align:&quot;=&gt;&lt;=&quot;)+(click-replace: &quot;✦&quot;)+(transition: &quot;dissolve&quot;)[You left me there, in that house, all alone.
-
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]</tw-passagedata><tw-passagedata pid="8" name="4.1" tags="" position="700,800" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[&#39;I think you should leave.&#39;
+(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[[[✦-&gt;4]]]]</tw-passagedata><tw-passagedata pid="5" name="4" tags="" position="700,800" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[&#39;I think you should leave.&#39;
 
 (align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]
 
 (align:&quot;=&gt;&lt;=&quot;)+(click-replace: &quot;✦&quot;)+(transition: &quot;dissolve&quot;)[&#39;What?&#39;
 
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[[[✦-&gt;5]]]]</tw-passagedata><tw-passagedata pid="9" name="hal.tracks" tags="" position="700,50" size="100,100">happenings: ./audio/happenings.mp3</tw-passagedata><tw-passagedata pid="10" name="Untitled Passage 1" tags="" position="700,175" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)[ [[✦]] ]</tw-passagedata></tw-storydata>
+(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]
+
+(align:&quot;=&gt;&lt;=&quot;)+(click-replace: &quot;✦&quot;)+(transition: &quot;dissolve&quot;)[&#39;I said, I think you should leave.&#39;
+
+(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]
+
+(align:&quot;=&gt;&lt;=&quot;)+(click-replace: &quot;✦&quot;)+(transition: &quot;dissolve&quot;)[This time, when I spoke, you listened.
+
+(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)+(transition: &quot;dissolve&quot;)[✦]]</tw-passagedata><tw-passagedata pid="6" name="hal.tracks" tags="" position="700,50" size="100,100">happenings: ./audio/happenings.mp3</tw-passagedata><tw-passagedata pid="7" name="Untitled Passage 1" tags="" position="700,175" size="100,100">(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)[ [[✦]] ]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
