--- a/regression.html
+++ b/regression.html
@@ -10,17 +10,21 @@
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play regression.</tw-noscript></noscript></tw-story>
 <tw-storydata name="regression" startnode="11" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="CD05A84C-67F6-48F8-9CB8-8DA158BA6292" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">body {
-  font-family: "Times New Roman", serif;
+  font-family: "Times New Roman";
   font-size: 12px;
-  background-color: black;
-  opacity: 0.6;
+  background-color: rgba(0, 0, 0, 0.6);
   background-image: url(images/mint.jpg);
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   margin-top: 0px;
   margin-bottom: 0px;
-  margin-right: 150px;
-  margin-left: 150px;
+  margin-right: 10%;
+  margin-left: 10%;
+}
+
+tw-story {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: rgba(255, 255, 255, 0.8);
 }
 
  /* Removing the back/forward arrows. */
